fix: Change font used for textarea in forms
Monospace was the OS default and doesn't look good.

--- a/vagrant/catalog/catalog/static/css/styles.css
+++ b/vagrant/catalog/catalog/static/css/styles.css
@@ -3,9 +3,14 @@ html {
 }
 
 html, body {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     margin: 0;
     padding: 0;
+}
+
+
+textarea {
+    font-family: "Helvetica","Arial", sans-serif;
 }
 
 /* Make the title look like normal text while clickable. */
